cabal-version: 3.0
name: book
version: 0
data-files: **/*.txt

library
    default-language: Haskell2010
    default-extensions: BlockArguments QuasiQuotes TypeApplications ScopedTypeVariables
    ghc-options: -Wall -fdefer-typed-holes
    build-depends: sockets-and-pipes ^>= 0.3
    exposed-modules: Bytes, Chunks, Book, FileHelpers 

executable proglet
    main-is: Main.hs
    -- other-modules:
    -- other-extensions:
    -- hs-source-dirs:
    other-modules: Chunks, FileHelpers
    default-extensions: BlockArguments QuasiQuotes TypeApplications ScopedTypeVariables
    ghc-options: -Wall -fdefer-typed-holes
    build-depends: sockets-and-pipes ^>= 0.3
    default-language: Haskell2010